update non-standard gamepads

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/svg+xml" href="/images/gamepad.svg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple jsgame starter</title>
   <style>
@@ -32,7 +33,7 @@
 </head>
 <body>
   <!-- Internal aspect ratio 4:3 -->
-  <canvas id="game-canvas" width="1920" height="1080"></canvas>
+  <canvas id="game-canvas" width="640" height="480"></canvas>
   <script>
     const canvas = document.getElementById('game-canvas');
     const ctx = canvas.getContext("2d");
